--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
     <link rel="stylesheet" href="{{ '/assets/css/third.css' }}" />
-    <link rel="stylesheet" href="{{ '/assets/css/style2.css' }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' }}" />
 
     <link rel="alternate" href="{{ page.url | replace:'index.html','' }}" hreflang="pt-br" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' }}" />
